Joda-Time version 1.2
---------------------

Joda-Time is a date and time handling library that seeks to replace the JDK
Date and Calendar classes.

This is the third full release of Joda-Time.

We recommend JDK 1.3 or later, and have performed no testing on earlier JDKs.

Joda-Time is licensed under the business-friendly Apache License Version 2.
This is the same license as all of Apache, plus other open source projects such as Spring.
The intent is to make the code available to the Java community with the minimum
of restrictions. If the license cause you problems please contact the mailing list.


Incompatible changes since 1.1
------------------------------
Binary compatible - Yes
  - v1.0 and v1.1 are binary compatible in their public and protected API

Source compatible - Yes
  - v1.0 and v1.1 are source compatible in their public and protected API

Serialization compatible - Yes

Data compatible - Yes


Warnings since 1.1
------------------
- ChronologyType
  If you have created your own subclass of Chronology, you should create
  a ChronologyType subclass to define a type for your chronology, and
  override the Chronology.getType() to return it.


Deprecations since 1.1
----------------------
None


Bug fixes since 1.1
-------------------
- ZonedChronology
  getMaximumValue(ReadablePartial)/getMinimumValue(ReadablePartial)
  Methods returned incorrect result


Enhancements since 1.1
----------------------
- ChronologyType
  New type that acts as a factory for creating Chronology instances
  Chronology.getType() returns the type


Feedback
--------
All feedback is welcomed at joda-interest@lists.sourceforge.net.

The Joda team